Configure Spring security, including: configure JwtFilter, SecurityConfig. Configure JWtService for Jwt related services. Updated application.yml